--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,8 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.3",
+    "fs": "^0.0.1-security",
+    "googleapis": "^134.0.0",
     "mongoose": "^8.2.2",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.0",
